--- a/CSV.TcHmiXplanar/TcHmiXplanar/packages.config
+++ b/CSV.TcHmiXplanar/TcHmiXplanar/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="Beckhoff.TwinCAT.HMI.Controls" version="12.758.8" targetFramework="native1.12-tchmi" />
   <package id="Beckhoff.TwinCAT.HMI.Framework" version="12.758.8" allowedVersions="[,13)" targetFramework="native1.12-tchmi" />
-  <package id="Microsoft.TypeScript.MSBuild" version="4.6.4" developmentDependency="true" />
+  <package id="Microsoft.TypeScript.MSBuild" version="4.8.4" developmentDependency="true" targetFramework="native1.12-tchmi" />
 </packages>
