Modified offsets between scale  1 <-> 4

--- a/CSV.TcHmiXplanar/TcHmiProject_UnitTest/Properties/tchmiconfig.json
+++ b/CSV.TcHmiXplanar/TcHmiProject_UnitTest/Properties/tchmiconfig.json
@@ -63,8 +63,15 @@
   "userFunctions": [],
   "symbols": {
     "internal": {
-      "bTest": {
-        "type": "tchmi:general#/definitions/BOOL",
+      "nSelectedTrack": {
+        "value": 0.0,
+        "type": "tchmi:general#/definitions/Number",
+        "persist": false,
+        "readonly": false
+      },
+      "nSelectedScale": {
+        "value": 2.0,
+        "type": "tchmi:general#/definitions/Number",
         "persist": false,
         "readonly": false
       }
